Fix alignment of the finale.

--- a/themes/freewill/source/css/style.css
+++ b/themes/freewill/source/css/style.css
@@ -463,6 +463,7 @@ img {
 }
 
 .finale {
+  width: 100%;
   margin: 70px 0;
   text-align: center;
 }
